# distant.nvim

./: .editorconfig  .gitignore  CHECKLIST.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  TODO.txt  docker-compose.yml
.github/workflows/: ci.yml  doc.yml  docs.yml  tests.yml
doc/: distant.txt
docs/: distant.txt
lua/distant/: action.lua  api.lua  autocmd.lua  buffer.lua  cli.lua  client.lua  command.lua  constants.lua  data.lua  default.lua  default_settings.lua  editor.lua  events.lua  fn.lua  globals.lua  health.lua  init.lua  launch.lua  lib.lua  log.lua  lsp.lua  session.lua  settings.lua  setup.lua  state.lua  ui.lua  utils.lua  vars.lua  version.lua  wrap.lua
lua/distant-core/: api.lua  auth.lua  cli.lua  client.lua  data.lua  destination.lua  emitter.lua  init.lua  inspect.lua  installer.lua  job.lua  log.lua  lsp.lua  manager.lua  server.lua  settings.lua  state.lua  timeout.lua  utils.lua  vars.lua  version.lua
lua/distant-core/api/: batch.lua  error.lua  process.lua  searcher.lua  transport.lua  watcher.lua
lua/distant-core/auth/: handler.lua  init.lua  spawn.lua
lua/distant-core/builder/: api.lua  cmd.lua  connect.lua  init.lua  launch.lua  shell.lua  spawn.lua
lua/distant-core/cli/: auth.lua  client.lua  init.lua  (+2 more)
plugin/: distant.vim
spec/: config.lua  init.lua  inject.lua  spec.vim  types.lua  utils.lua
spec/e2e/: config.lua  driver.lua  utils.lua
spec/editor/: open_spec.lua
spec/unit/: config.lua  inject.lua  utils.lua
src/: lib.rs  runtime.rs  session.rs  utils.rs
src/session/: api.rs  opts.rs  proc.rs
(+335 files in other folders)
